<resources>
    <string name="app_name">proyectoFinal</string>
    <string name="icono_de_la_app">icono de la app</string>
    <string name="es_el_icono_predeterminado_de_registro_y_de_usuario">Icono predeterminado de avatar</string>
    <string name="regresar">regresar</string>
    <string name="registrarse">registrarse</string>
    <string name="clave">clave</string>
    <string name="correo">correo</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="nombre">"Nombre "</string>
    <string name="es_el_icono_principal_de_la_app_aparecera_en_el_resto_de_pantalla_en_la_parte_inferior_de_la_ventana_junto_al_boton_regresar">Icono de la aplicaci[on, aparece en todas las pantallas</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="amigos">Amigos</string>
    <string name="tipos">Tipos</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="prueba">Prueba</string>
    <string name="auditivo">Auditivo</string>
    <string name="visual">Visual</string>
    <string name="puntajes">Puntaje</string>
    <string name="kinestetica">kinestetica</string>
    <string name="tipos_de_inteligencia">Tipos de inteligencia</string>
    <string name="agregar">Agregar</string>
    <string name="enviar">Enviar</string>
    <string name="Ver_usuarios">Ver Usuarios</string>
    <string name="resultados">Resultados</string>
</resources>