<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borde"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:contentDescription="@string/es_el_icono_predeterminado_de_registro_y_de_usuario"
        android:layout_width="100dp"
        android:layout_height="98dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPrueba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perfiln" />

    <Button
        android:id="@+id/buttonPrueba"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/prueba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView5"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>

    <Button
        android:id="@+id/buttonResultados"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/resultados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrueba"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>

    <Button
        android:id="@+id/buttonRecomemdaciones"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/recomendaciones"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResultados"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>

    <Button
        android:id="@+id/buttonTipos"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/tipos"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecomemdaciones"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>

    <Button
        android:id="@+id/buttonAmigos"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/Ver_usuarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTipos"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>


    <ImageView
        android:id="@+id/imageView4"
        android:contentDescription="@string/es_el_icono_principal_de_la_app_aparecera_en_el_resto_de_pantalla_en_la_parte_inferior_de_la_ventana_junto_al_boton_regresar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAmigos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cerebro" />

</androidx.constraintlayout.widget.ConstraintLayout>