<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borde"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextTextNombreR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:autofillHints="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextTextNombreUsuarioR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/nombre_de_usuario"
        android:autofillHints="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNombreR"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextTextCorreoR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/correo"
        android:autofillHints="@string/correo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNombreUsuarioR"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextTextClaveR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/clave"
        android:autofillHints="@string/clave"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextCorreoR"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonRegistrarseR"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="162dp"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextClaveR"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>


    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/es_el_icono_predeterminado_de_registro_y_de_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextNombreR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perfiln" />

    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@string/icono_de_la_app"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/buttonRegistrarseR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cerebro" />

</androidx.constraintlayout.widget.ConstraintLayout>