<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borde"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:autofillHints="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextTextClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/clave"
        android:autofillHints="@string/clave"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsuario"
        android:gravity="center"/>

    <Button
        android:id="@+id/buttonIngresar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="39dp"
        android:text="@string/ingresar"
        android:textColor="@drawable/btn_text"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegistrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextClave"
        android:background="@drawable/btn_estilo"/>

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="91dp"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonIngresar"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextClave"
        android:textColor="@drawable/btn_text"
        android:background="@drawable/btn_estilo"/>

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/es_el_icono_principal_de_la_app_aparecera_en_el_resto_de_pantalla_en_la_parte_inferior_de_la_ventana_junto_al_boton_regresar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/cerebro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="400dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>