<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borde"
    tools:context=".ResultadosActivity">

    <TextView
        android:id="@+id/textViewResultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultados"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="650dp"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#000"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textViewPuntajes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntajes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultados"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:id="@+id/textViewVisual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewAuditivo"
        app:layout_constraintTop_toBottomOf="@id/textViewPuntajes"
        android:layout_marginTop="160dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/textViewResultadoVisual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewVisual"
        app:layout_constraintTop_toBottomOf="@id/textViewPuntajes"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="230dp"
        android:textSize="50sp"
        android:textColor="#0071bc"/>

    <TextView
        android:id="@+id/textViewAuditivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auditivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPuntajes"
        android:layout_marginTop="160dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/textViewResultadoAuditivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewAuditivo"
        app:layout_constraintTop_toBottomOf="@id/textViewPuntajes"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="50sp"
        android:textColor="#ed1c24"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kinestésico"
        app:layout_constraintStart_toEndOf="@id/textViewAuditivo"
        app:layout_constraintTop_toBottomOf="@+id/textViewPuntajes"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="160dp"
        tools:ignore="HardcodedText"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/textViewResultadoKine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView8"
        app:layout_constraintTop_toBottomOf="@id/textViewPuntajes"
        android:layout_marginTop="100dp"
        android:layout_marginStart="230dp"
        android:layout_marginBottom="50dp"
        android:textSize="50sp"
        android:textColor="#ccb200" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tu inteligencia mas predominante es:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAuditivo"
        android:layout_marginTop="110dp"
        android:textAlignment="center"
        tools:ignore="HardcodedText"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <TextView
        android:id="@+id/textViewResultadoTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAuditivo"
        android:textSize="40sp"
        android:textColor="#000000"
        />


    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/es_el_icono_principal_de_la_app_aparecera_en_el_resto_de_pantalla_en_la_parte_inferior_de_la_ventana_junto_al_boton_regresar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/textViewResultadoTipo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cerebro"/>

</androidx.constraintlayout.widget.ConstraintLayout>